<resources>
    <string name="app_name" translatable="false">colorPicker</string>

    <string name="palette" translatable="false">Material palette</string>

    <!-- Texts-->
    <string name="hex" translatable="false">HEX:</string>
    <string name="hashtag" translatable="false">#</string>
    <string name="rgb" translatable="false">RGB:</string>
    <string name="A" translatable="false">A</string>
    <string name="R" translatable="false">R</string>
    <string name="G" translatable="false">G</string>
    <string name="B" translatable="false">B</string>
    <string name="rgb_default">255</string>
    <string name="spacer_char">|</string>

    <!-- Colors names -->
    <string name="red_name">Red</string>
    <string name="pink_name">Pink</string>
    <string name="purple_name">Purple</string>
    <string name="deepPurple_name">Deep purple</string>
    <string name="indigo_name">Indigo</string>
    <string name="blue_name">Blue</string>
    <string name="lightBlue_name">Light blue</string>
    <string name="cyan_name">Cyan</string>
    <string name="teal_name">Teal</string>
    <string name="green_name">Green</string>
    <string name="lightGreen_name">Light green</string>
    <string name="lime_name">Lime</string>
    <string name="yellow_name">Yellow</string>
    <string name="amber_name">Amber</string>
    <string name="orange_name">Orange</string>
    <string name="deepOrange_name">Deep orange</string>
    <string name="brown_name">Brown</string>
    <string name="grey_name">Grey</string>
    <string name="blueGrey_name">Blue grey</string>
    <string name="darkGrey_name">Dark grey</string>

    <!-- Warnings -->
    <string name="hex_error">Type a 6 digits hex code</string>
    <string name="aahex_error">Type a 2 digits hex code</string>
    <string name="rgb_error">Type a value between 0 and 255</string>

</resources>
