<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/values_view"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <RelativeLayout
            android:id="@+id/hexGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/hashtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/hex_margin"
                android:text="@string/hex"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/hashtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/hashtext"
                android:text="@string/hashtag"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed" />

            <EditText
                android:id="@+id/hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/hashtag"
                android:background="@null"
                android:digits="0,1,2,3,4,5,6,7,8,9,a,b,c,d,e,f,A,B,C,D,E,F"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:maxLength="6"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rgbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/rgb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/circles_margin"
                android:text="@string/rgb"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed" />

            <EditText
                android:id="@+id/red_edit"
                style="@style/ARGBEditText"
                android:layout_marginEnd="@dimen/circles_margin"
                android:layout_toEndOf="@+id/rgb"
                android:text="@string/rgb_default"
                android:fontFamily="sans-serif-condensed"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/spacer_1"
                style="@style/ARGBEditText"
                android:layout_marginEnd="3dp"
                android:layout_toEndOf="@+id/red_edit"
                android:text="@string/spacer_char"
                android:fontFamily="sans-serif-condensed" />

            <EditText
                android:id="@+id/green_edit"
                style="@style/ARGBEditText"
                android:layout_marginEnd="@dimen/circles_margin"
                android:layout_toEndOf="@+id/spacer_1"
                android:text="@string/rgb_default"
                android:fontFamily="sans-serif-condensed"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/spacer_2"
                style="@style/ARGBEditText"
                android:layout_marginEnd="3dp"
                android:layout_toEndOf="@+id/green_edit"
                android:text="@string/spacer_char"
                android:fontFamily="sans-serif-condensed" />

            <EditText
                android:id="@+id/blue_edit"
                style="@style/ARGBEditText"
                android:layout_marginEnd="@dimen/circles_margin"
                android:layout_toEndOf="@+id/spacer_2"
                android:text="@string/rgb_default"
                tools:ignore="LabelFor"
                android:fontFamily="sans-serif-condensed" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/seek_view"
        android:layout_below="@id/values_view"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/red_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/activity_margin">

            <TextView
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/circles_margin"
                android:text="@string/R"
                android:textSize="14sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/red_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/red"
                android:max="255" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/green_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/red_container"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/activity_margin">

            <TextView
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/circles_margin"
                android:text="@string/G"
                android:textSize="14sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/green_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/green"
                android:max="255" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/blue_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/green_container"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="@dimen/activity_margin">

            <TextView
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/circles_margin"
                android:text="@string/B"
                android:textSize="14sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/blue_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/blue"
                android:max="255"
                android:tag="@color/seekBlue" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/palette_container"
        android:layout_below="@id/seek_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/circles_margin"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/userPaletteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginBottom="@dimen/common_margin"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:paddingRight="14dp"
            android:paddingEnd="14dp"
            android:text="Recent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:fontFamily="sans-serif-condensed" />

        <GridView
            android:id="@+id/userPalette"
            android:numColumns="auto_fit"
            android:columnWidth="35dp"
            android:layout_below="@id/userPaletteText"
            android:paddingStart="@dimen/common_margin"
            android:paddingEnd="@dimen/common_margin"
            android:gravity="center"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/paletteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPalette"
            android:layout_marginBottom="@dimen/common_margin"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:paddingRight="14dp"
            android:paddingEnd="14dp"
            android:text="@string/palette"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed" />

        <GridView
            android:id="@+id/palette"
            android:numColumns="auto_fit"
            android:columnWidth="35dp"
            android:layout_below="@id/paletteText"
            android:paddingStart="@dimen/common_margin"
            android:paddingEnd="@dimen/common_margin"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:id="@+id/cancel_button"
        style="@style/DialogButton"
        android:textColor="@android:color/white"
        android:text="@android:string/cancel"
        android:layout_below="@id/palette_container"
        android:layout_toStartOf="@+id/ok_button"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/ok_button"
        style="@style/DialogButton"
        android:textColor="@android:color/white"
        android:text="@android:string/ok"
        android:layout_below="@id/palette_container"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"/>

</RelativeLayout>